[workspace]
members = [
    "xtask", 
    "lib/*",
    "bin/*",
    "test",
    # "examples/*",
]
default-members = ["lib/*", "bin/*", "test"]
resolver = "2"

[workspace.package]
authors = ["Johan <dev@johan.moe>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
license-file = "LICENSE"

[profile.release]
lto = 'fat'
opt-level = 's'
debug-assertions = false