[package]
name = "tracing-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false # Change to publish on crates.io

[lib]
path = "src/lib.rs"
test = true
doctest = false
bench = false
doc = true

[features]
default = ["file", "tree"]
file = []
tree = []

[dependencies]
tracing = "0.1"
tracing-appender = { version = "0.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
tracing-tree = "0.2"
